--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         
         <body>
             <header>
-                <div class="logo"></div>
+                <div class="logo"><img src="images/logo.svg"></div>
             </header>
 
             <main>
-                <div class="mockup"></div>
+                <div class="mockup"><img src="images/illustration-mockups.svg"></div>
                 <div class="copy">
                     <h1>Build The Community Your Fans Will Love</h1>
                     <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion.</p>
